[gd_scene load_steps=3 format=3 uid="uid://deqadw1ufsxt0"]

[ext_resource type="Script" uid="uid://cga4kmfv7elu1" path="res://constellation_reward.gd" id="1_55ymf"]
[ext_resource type="PackedScene" uid="uid://4msbts6xms8m" path="res://constellation_card_ui.tscn" id="2_yk3df"]

[node name="ConstellationReward" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_55ymf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 140.0
offset_right = 393.0
offset_bottom = 416.0

[node name="ConstellationCardUi" parent="HBoxContainer" instance=ExtResource("2_yk3df")]
layout_mode = 2

[node name="ConstellationCardUi2" parent="HBoxContainer" instance=ExtResource("2_yk3df")]
layout_mode = 2

[node name="ScrapButton" type="Button" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 442.0
offset_right = 619.0
offset_bottom = 473.0
text = "Scrap Both for 5 Tokens..."
